# gdrive-assistant-bot

./: .env.example  .gitignore  .mdl_style.rb  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  FILE_TYPES_PLAN.md  Makefile  README.md  docker-compose.override.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/gdrive_assistant_bot/: bot.py  errors.py  health.py  ingest.py  logging.py  rag.py  settings.py  smoke_test.py
src/gdrive_assistant_bot/adapters/: llm.py  telegram.py
src/gdrive_assistant_bot/core/ingest/: limiter.py  models.py  service.py
src/gdrive_assistant_bot/core/qa/: models.py  service.py
src/gdrive_assistant_bot/extractors/: __init__.py  base.py  pdf.py  registry.py  text.py  utils.py
src/gdrive_assistant_bot/extractors/google/: __init__.py  docs.py  sheets.py  slides.py
src/gdrive_assistant_bot/extractors/office/: __init__.py  excel.py  powerpoint.py  word.py
src/gdrive_assistant_bot/providers/: __init__.py  base.py  registry.py
src/gdrive_assistant_bot/providers/google_drive/: api.py  clients.py  provider.py
tests/: conftest.py  fakes.py  test_adapters_llm.py  test_bot_entrypoint.py  test_docker_smoke.py  test_extractor_registry.py  test_extractors_google.py  test_extractors_google_slides.py  test_extractors_init.py  test_extractors_office_excel.py  test_extractors_office_powerpoint.py  test_extractors_office_word.py  test_extractors_parsers.py  test_extractors_pdf.py  test_extractors_text.py  test_google_drive_api.py  test_google_drive_clients.py  test_health_server.py  test_ingest_entrypoint.py  test_ingest_service.py  test_logging_setup.py  test_provider_google_drive.py  test_provider_google_drive_listing.py  test_provider_registry.py  test_qa_service.py  test_rag_integration_qdrant.py  test_rag_unit.py  test_rate_limiter.py  test_settings_validation.py  test_telegram_adapter.py
